# e2e-agent

./: .env.example  .gitignore  README.md  pyproject.toml
demo_app/: index.html
e2e_agent/: __init__.py  agent.py  config.py  harness.py  prompts.py
e2e_agent/.adk/: session.db
e2e_agent/tools/: coding.py  locators.py  runner.py
tests/: test_store_e2e.py
tests/ts/: package-lock.json  package.json  playwright.config.ts  store-e2e.spec.ts
workspace/: package.json  playwright.config.ts
